# social_benchmark_robotic_navigation

./: .gitignore  LICENSE  README.md
hbsn/: README.md  pyproject.toml
hbsn/src/HBSN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hbsn/src/hbsn/human_trajectory_prediction/: human_trajctory_prediction_model.py
hbsn/src/hbsn/mdp/: Action.py  State.py
hbsn/src/hbsn/polygonal_map/: map.py  polygonal_map.py
hbsn/src/hbsn/polygonal_map/py_floor_plan_segmenter/: custom.yml
hbsn/src/hbsn/polygonal_map/py_floor_plan_segmenter/debugging/: debugging_factory.py
hbsn/src/hbsn/robot_human_environment/: env.py
hbsn/src/hbsn/solver/: ValueIteration.py  heuristicfunction.py  qfunction.py
hbsn/src/hbsn/utils/: util.py
ros2_ws/src/ROS-TCP-Endpoint/: setup.py
ros2_ws/src/ROS-TCP-Endpoint/ros_tcp_endpoint/: client.py  publisher.py  server.py
ros2_ws/src/agent_trajectory_prediction/: CMakeLists.txt  package.xml
ros2_ws/src/agent_trajectory_prediction/scripts/: agent_trajectory_prediction_publisher.py  agent_trajectory_prediction_visualization.py  agent_trajectory_simple_prediction_publisher.py
ros2_ws/src/assets/: CMakeLists.txt  package.xml
ros2_ws/src/assets/maps/crowd/: map.yaml
ros2_ws/src/assets/maps/intersection/: map.yaml
ros2_ws/src/assets/maps/narrow_passage/: map.yaml
ros2_ws/src/bsrn_ros/scripts/: map_publisher.py
ros2_ws/src/hbsn_ros/: CMakeLists.txt  package.xml
ros2_ws/src/hbsn_ros/config/: params.yaml
ros2_ws/src/hbsn_ros/hbsn_ros/: interpreter.py
ros2_ws/src/hbsn_ros/launch/: hbsn_sim.launch.py
ros2_ws/src/hbsn_ros/scripts/: HBSN.py
ros2_ws/src/mbsn_ros/: CMakeLists.txt  package.xml
ros2_ws/src/mbsn_ros/config/: params.yaml
ros2_ws/src/mbsn_ros/launch/: mbsn_real.launch.py  mbsn_sim.launch.py
ros2_ws/src/mbsn_ros/mbsn_ros/: interpreter.py  util.py
ros2_ws/src/mbsn_ros/scripts/: MBSN_real.py  MBSN_sim.py
ros2_ws/src/msgs/agents_msgs/: CMakeLists.txt  bridge_mapping.yaml  package.xml
ros2_ws/src/msgs/agents_msgs/msg/: Agent.msg  AgentArray.msg  AgentTrajectories.msg  AgentTrajectory.msg
ros2_ws/src/msgs/metric_msgs/: CMakeLists.txt  bridge_mapping.yaml  package.xml
ros2_ws/src/msgs/metric_msgs/msg/: TrialInfo.msg
ros2_ws/src/msgs/simulation_msgs/: CMakeLists.txt  bridge_mapping.yaml  package.xml
ros2_ws/src/msgs/simulation_msgs/msg/: PersonEntry.msg  PersonEntryArray.msg  RealDepthImage.msg  SceneInfo.msg  TrialStart.msg
ros2_ws/src/social_metrics/: CMakeLists.txt  package.xml
ros2_ws/src/social_metrics/data/DWB/: perpendicular_traffic.csv
ros2_ws/src/social_metrics/scripts/: record_metrics.py
ros2_ws/src/unity_sim/: CMakeLists.txt  package.xml
ros2_ws/src/unity_sim/graphs/: corner.pickle  door_passing.pickle  hospital.pickle  intersection.pickle  overtaking.pickle  static.pickle
ros2_ws/src/unity_sim/launch/: kuri_state_publisher.launch.py  map_publisher.launch.py  nav2.launch.py  rviz.launch.py
ros2_ws/src/unity_sim/maps/complete/: map.yaml
ros2_ws/src/unity_sim/maps/corner/: map.yaml
ros2_ws/src/unity_sim/maps/door_passing/: map.yaml  map_server_params.yaml  short_map.jpg.kra  short_map.jpg~
ros2_ws/src/unity_sim/maps/hospital_test/: map.yaml
ros2_ws/src/unity_sim/params/: bridge_params.yaml  nav2_params.yaml
ros2_ws/src/unity_sim/policies/: corner_astar.pickle  door_passing_astar.pickle  hospital.pickle  hospital_astar.pickle  intersection_astar.pickle  overtaking_astar.pickle  static_astar.pickle
ros2_ws/src/unity_sim/rviz/: config.rviz
ros2_ws/src/unity_sim/scripts/: graph_publisher.py  map_republisher.py  trial_info_listener.py
ros2_ws/src/unity_sim/urdf/: kuri.urdf.xacro  kuri2.urdf.xacro
sbrn/: .gitignore
sbrn/Assets/: msgbrowser_settings.asset
sbrn/Assets/Environments/Materials/Graph/: Node.mat
sbrn/Assets/Environments/Materials/Scenario/: Default.mat  Door.mat  Elevator.mat  Elevator_bgd.mat  Glass.mat  Plinthe.mat  Wall_down.mat  Wall_up.mat
sbrn/Assets/Environments/Models/Hospital/: hospital.fbx
sbrn/Assets/ExternalAssets/DepthCamera/Materials/: CubeMaterial.mat
sbrn/Assets/ExternalAssets/LightShafts/: LightShafts.Resources.cs
sbrn/Assets/IVI/Materials/: Green.mat  GroupNavNode.mat  Obstacle.mat  Target.mat
sbrn/Assets/IVI/Prefabs/: MyWarehouseGraph.prefab
sbrn/Assets/IVI/Scripts/: SFAgent.cs
sbrn/Assets/Materials/: hospital.mat  sustainability-14-12590-g001.mat
sbrn/Assets/Resources/: ROSConnectionPrefab.prefab
sbrn/Assets/Resources/Materials/: TargetMat.mat  TargetMat2.mat
sbrn/Assets/Resources/Prefabs/: RocketboxRandomAnimatedAgent.prefab
sbrn/Assets/Scenes/: corner.unity  crowd.unity  frontal.unity  intersection.unity  narrow_passage.unity  perpendicular_traffic.unity
sbrn/Assets/Scenes/corner/: NavMesh-Navigation.asset
sbrn/Assets/Scenes/crowd/: NavMesh-Navigation.asset
sbrn/Assets/Scenes/frontal/: NavMesh-Navigation.asset
sbrn/Assets/Scenes/intersection/: NavMesh-Navigation.asset
sbrn/Assets/Scenes/narrow_passage/: NavMesh-Navigation.asset
sbrn/Assets/Scripts/Agents/: Parameters.cs  PositionAgent.cs  RocketboxPlaybackRandomAvatar.cs
sbrn/Assets/Scripts/Communication/: BaseCameraPublisher.cs  BoolPublisher.cs  LaserScanSubscriber.cs  RGBCameraPublisher.cs  SpawnArrayPublisher.cs  StringPublisher.cs  TrialStartSubscriber.cs
sbrn/Assets/Scripts/Env/: SquadFormation.cs  WorldTransform.cs
sbrn/Assets/Scripts/Graph/: GraphCreator.cs  NavNode.cs
sbrn/Assets/Scripts/SEAN/: SEAN.cs  SEANRosInterface.cs
sbrn/Assets/Settings/: High_PipelineAsset.asset  Low_PipelineAsset.asset  Medium_PipelineAsset.asset  URP.asset  Ultra_PipelineAsset.asset  Very High_PipelineAsset.asset  Very Low_PipelineAsset.asset
sbrn/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
tmux/brne/: .tmuxinator.yml  compose.yaml
tmux/cadrl/: .tmuxinator.yml  compose.yaml
tmux/drl_vo/: .tmuxinator.yml  compose.yaml
tmux/dwb/: .tmuxinator.yml
tmux/hateb/: .tmuxinator.yml  compose.yaml
tmux/hbsn/: .tmuxinator.yml
tmux/mbsn/: .tmuxinator.yml
tmux/sarl_star/: .tmuxinator.yml  compose.yaml
(+177 files in other folders)
